--- a/settings.json
+++ b/settings.json
@@ -1,4 +1,4 @@
 {
-   "NTExMjg0MTI2MjA5NDA5MDQ2.DsoqKQ.cuhrk4Vmf-5KIpLIWIvlL-HGm1k": "", //Mars Bot//
-   "-": "" //Prefix//
-}
+    "token": "NTExMjg0MTI2MjA5NDA5MDQ2.DsoqKQ.cuhrk4Vmf-5KIpLIWIvlL-HGm1k", //Mars Bot//
+    "prefix": "-" //Prefix//
+ }
