--- a/settings.json
+++ b/settings.json
@@ -1,4 +1,4 @@
 {
-    "token": "NTExMjg0MTI2MjA5NDA5MDQ2.DsoqKQ.cuhrk4Vmf-5KIpLIWIvlL-HGm1k", //Mars Bot//
+    "token": "NTExMjg0MTI2MjA5NDA5MDQ2.DsoqKQ.cuhrk4Vmf-5KIpLIWIvlL-HGm1k", //MarsBot//
     "prefix": "-" //Prefix//
  }
