--- a/settings.json
+++ b/settings.json
@@ -1,4 +1,4 @@
 {
-   "token": "NTExMjg0MTI2MjA5NDA5MDQ2.Dsua9A.lEpTZB_fdTBoe4dJX4ULhBk2m6w", 
+   "token": "settings.token", 
    "prefix": "$" 
 }
